Fix bug #33518: Overtime shift does not appear in Month View.

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/MonthView.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/MonthView.css
@@ -134,6 +134,10 @@ span[data-cal-date] {
 	padding-top: 40px;
 }
 
+.cal-month-day .overtime {
+	padding-top: 40px;
+}
+
 .cal-weekday-header {
 	border-left: 1px solid #dfdfdf !important;
 	border-right: 1px solid #dfdfdf !important;
